updates to new config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,8 +1,21 @@
+# fix-colors
+set-option -sa terminal-overrides ",xterm*:Tc"
+
 # remap prefix to Control + a
 set -g prefix C-a
 # bind 'C-a C-a' to type 'C-a'
 bind C-a send-prefix
 unbind C-b
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+
+# Open panes in current directory
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
 
 # vim style keybindings
 setw -g mode-keys vi
@@ -22,8 +35,11 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# start selection with 'space' and copy selection with 'y'
+# start selection with 'v' and copy selection with 'y'
+# C-v to toggle line mode
+bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-selection
+bind -T copy-mode-vi C-v send-keys -X rectangle-toggle
 
 
 ### toogle keybindings ###
